<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.abefehr.whatscheaper.MainActivity$PlaceholderFragment">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_button_text"
        android:id="@+id/clearButton"
        android:layout_alignRight="@+id/addButton"
        android:layout_alignEnd="@+id/addButton"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/addButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button_text"
        android:id="@+id/addButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/numUnitsText"
        android:layout_below="@+id/priceText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/priceText"
        android:hint="@string/price_text_hint"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/clearButton" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/numUnitsText"
        android:layout_below="@+id/priceText"
        android:layout_alignLeft="@+id/priceText"
        android:layout_alignStart="@+id/priceText"
        android:layout_alignRight="@+id/priceText"
        android:layout_alignEnd="@+id/priceText"
        android:hint="@string/num_units_text_hint" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-4885767461778395/5981546677" />

    <FrameLayout
        android:id="@+id/listFrame"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@id/adView"
        android:layout_below="@id/addButton"
        android:layout_marginBottom="3dp"
        android:background="#a0a0a0">

        <ListView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/listView"
            android:layout_margin="1dp"
            android:background="#ffffff"
            android:layout_gravity="center"
            android:clickable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/empty_list_text"
            android:id="@+id/emptyListTextView"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="#414141" />
    </FrameLayout>

</RelativeLayout>

